# url-shortener-auth

./: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 63cc1c58abff_initial_user_schema_migration.py
minikube/: deploy.yaml
terraform/: main.tf  variables.tfvars
terraform-eks/: .terraform.lock.hcl  main.tf  variables.tf  variables.tfvars
terraform-eks/.terraform/: terraform.tfstate
url_shortener_auth/: exceptions.py
url_shortener_auth/auth_service/: auth.py  auth_service.py
url_shortener_auth/repository/: auth_repository.py  models.py  unit_of_work.py
url_shortener_auth/web/: app.py
url_shortener_auth/web/api/: api.py  schemas.py
