[tool.poetry]
name = "url-shortener-auth"
version = "0.1.0"
description = ""
authors = ["Koh Jun Jie <koh.jun.jie@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
